# noteforge

./: .gitignore  README.md  REPORT.md  SKILL.md  TEAM.md  USER_GUIDE.md  log.jsonl  pyproject.toml
docs/: ARCHITECTURE.md  ARCHITECTURE_v2.md  CHANGELOG_2026-03-17.md  CHANGELOG_2026-03-18.md  INDEX.md  PRODUCT_PLAN_v1.md  PROJECT_CONTEXT.md  TASKS.md  USER_GUIDE.md  full_article.md  full_article_fixed.md  log.jsonl
docs/design/: 产品定义_v4.0.md  产品定义_v5_蓝图.md  架构设计_v1.md  需求调研报告.md
docs/evaluations/: 2026-03-17_管线技术方案深度评估.md  2026-03-17_轻量化评估_评估报告.md  kb_tech_evaluation_draft.md
docs/meetings/: 2026-03-17_kb-tool全天_会议记录.md  2026-03-17_产品讨论_会议记录.md
docs/reports/: 2026-03-17_全天工作总结.md  2026-03-17_全流程测试报告.md  cli_docs_report.md  kb_architecture_report.md
docs/research/: 2026-03-17_知识库工具深度调研.md
skills/kb-tool/: README.md  SKILL.md  handler.py
src/noteforge/: __init__.py  browser.py  cli.py  cli_batch.py  config.py  feishu_sync.py  llm.py  output.py  router.py
src/noteforge/pipelines/: __init__.py  article.py  base.py  ocr.py  video.py
tests/: test_article.py
